# autoware

./: DEMO.rviz  README.md
map/: lanelet2_mcity_v0.osm  lanelet2_mcity_v10.osm  lanelet2_mcity_v11.osm  lanelet2_mcity_v12.osm  lanelet2_mcity_v13.osm  lanelet2_mcity_v14.osm  lanelet2_mcity_v15.osm  lanelet2_mcity_v16.osm  lanelet2_mcity_v17.osm  lanelet2_mcity_v18.osm  lanelet2_mcity_v19.osm  lanelet2_mcity_v20.osm  lanelet2_mcity_v21.osm  lanelet2_mcity_v22.osm  lanelet2_mcity_v23.osm  lanelet2_mcity_v24.osm  lanelet2_mcity_v25.osm  lanelet2_mcity_v26.osm  lanelet2_mcity_v27.osm  lanelet2_mcity_v28.osm  lanelet2_mcity_v29.osm  lanelet2_mcity_v30.osm  lanelet2_mcity_v31.osm  lanelet2_mcity_v32.osm  lanelet2_mcity_v33.osm  lanelet2_mcity_v34.osm  lanelet2_mcity_v35.osm  lanelet2_mcity_v36.osm  lanelet2_mcity_v37.osm  lanelet2_mcity_v38.osm  lanelet2_mcity_v39.osm  lanelet2_mcity_v40.osm  lanelet2_mcity_v41.osm  lanelet2_mcity_v42.osm  lanelet2_mcity_v43.osm  lanelet2_mcity_v6.osm  lanelet2_mcity_v7.osm  lanelet2_mcity_v8.osm  lanelet2_mcity_v9.osm  map_projector_info_default.yaml  (+1 more)
src/launcher/autoware_launch/autoware_launch/config/control/vehicle_cmd_gate/: vehicle_cmd_gate.param.yaml
src/launcher/autoware_launch/autoware_launch/config/localization/yabloc/: gnss_particle_corrector.param.yaml
src/launcher/autoware_launch/autoware_launch/config/perception/object_recognition/prediction/: map_based_prediction.param.yaml
src/launcher/autoware_launch/autoware_launch/config/planning/scenario_planning/common/motion_velocity_smoother/: motion_velocity_smoother.param.yaml
src/launcher/autoware_launch/autoware_launch/launch/: autoware.launch.xml  planning_simulator.launch.xml
src/launcher/autoware_launch/autoware_launch/rviz/: autoware.rviz
src/mcity/autoware_cosim/: package.xml  setup.cfg  setup.py
src/mcity/autoware_cosim/autoware_cosim/: autoware_dummy_grid.py  autoware_tls_plugin.py  autoware_vehicle_plugin.py
src/mcity/autoware_planning/: package.xml  setup.cfg  setup.py
src/mcity/autoware_planning/autoware_planning/: autoware_planning.py
src/mcity/mcity_abc/: CMakeLists.txt  package.xml
src/mcity/mcity_abc/include/: test_01.hpp  test_02.hpp  test_03.hpp  test_04.hpp  test_05.hpp  test_06.hpp  test_07.hpp  test_08.hpp  test_09.hpp  test_10.hpp  test_11.hpp  test_12.hpp  test_13.hpp  test_15.hpp
src/mcity/mcity_abc/launch/: mcity_abc.launch.py
src/mcity/mcity_abc/src/: test_01.cpp  test_02.cpp  test_03.cpp  test_04.cpp  test_05.cpp  test_06.cpp  test_07.cpp  test_08.cpp  test_09.cpp  test_10.cpp  test_11.cpp  test_12.cpp  test_13.cpp  test_15.cpp
src/mcity/mcity_demo/: CMakeLists.txt  package.xml
src/mcity/mcity_demo/include/: autoware_interface_demo_cosim.hpp  autoware_interface_demo_realcar.hpp
src/mcity/mcity_demo/launch/: cosim.launch.py  realcar.launch.py
src/mcity/mcity_demo/src/: autoware_interface_demo_cosim.cpp  autoware_interface_demo_realcar.cpp
src/mcity/mcity_msgs/: CMakeLists.txt  package.xml
src/mcity/mcity_msgs/msg/: Control.msg  VehiclePlanning.msg  VehicleState.msg
src/mcity/mcity_rosbag/DIT_Loop/: metadata.yaml  rosbag2_2024_03_15-17_34_01_0.db3
src/mcity/mcity_rosbag/start_position_A/: metadata.yaml  rosbag2_2024_02_24-17_46_54_0.db3
src/mcity/mcity_rosbag/start_position_B/: metadata.yaml  rosbag2_2024_02_24-17_48_56_0.db3
src/mcity/redis_client/: RedisClient.cpp  RedisClient.h
src/universe/autoware.universe/common/autoware_auto_perception_rviz_plugin/src/object_detection/: object_polygon_detail.cpp  predicted_objects_display.cpp
src/universe/autoware.universe/launch/tier4_map_launch/launch/: map.launch.py
src/universe/autoware.universe/launch/tier4_perception_launch/launch/object_recognition/detection/: lidar_based_detection.launch.xml
src/universe/autoware.universe/launch/tier4_planning_launch/launch/: planning.launch.xml
src/universe/autoware.universe/launch/tier4_planning_launch/launch/scenario_planning/: lane_driving.launch.xml
src/universe/autoware.universe/launch/tier4_simulator_launch/launch/: simulator.launch.xml
src/universe/autoware.universe/localization/ekf_localizer/src/: ekf_localizer.cpp
src/universe/autoware.universe/perception/lidar_centerpoint/src/: node.cpp
src/universe/autoware.universe/perception/map_based_prediction/src/: map_based_prediction_node.cpp
src/universe/autoware.universe/planning/behavior_path_planner/config/avoidance/: avoidance.param.yaml
src/universe/autoware.universe/planning/behavior_path_planner/config/avoidance_by_lc/: avoidance_by_lc.param.yaml
src/universe/autoware.universe/planning/behavior_path_planner/docs/: behavior_path_planner_avoidance_design.md
src/universe/autoware.universe/planning/behavior_path_planner/src/scene_module/avoidance/: avoidance_module.cpp
src/universe/autoware.universe/planning/behavior_path_planner/src/scene_module/goal_planner/: goal_planner_module.cpp
src/universe/autoware.universe/planning/behavior_velocity_intersection_module/src/: scene_intersection.cpp
src/universe/autoware.universe/planning/behavior_velocity_planner/: package.xml
src/universe/autoware.universe/planning/behavior_velocity_planner/src/: node.cpp
src/universe/autoware.universe/planning/motion_velocity_smoother/: package.xml
src/universe/autoware.universe/planning/motion_velocity_smoother/include/motion_velocity_smoother/: motion_velocity_smoother_node.hpp
src/universe/autoware.universe/planning/motion_velocity_smoother/src/: motion_velocity_smoother_node.cpp
src/universe/autoware.universe/planning/obstacle_velocity_limiter/src/: obstacle_velocity_limiter_node.cpp
src/universe/autoware.universe/simulator/dummy_perception_publisher/src/: node.cpp
src/universe/autoware.universe/simulator/simple_planning_simulator/param/: simple_planning_simulator_default.param.yaml
src/universe/autoware.universe/system/default_ad_api/src/: operation_mode.cpp
src/universe/autoware.universe/system/default_ad_api/src/compatibility/: autoware_state.cpp
src/vehicle/sample_vehicle_launch/sample_vehicle_description/config/: simulator_model.param.yaml
(+8 files in other folders)
