<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mcity_abc</name>
  <version>0.1.0</version>
  <description>The mcity_abc package</description>
  <maintainer email="zhijieq@umich.edu">Zhijie Qiao</maintainer>
  <license>Apache License 2.0</license>

  <author email="zhijieq@umich.edu">Zhijie Qiao</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_auto_system_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>tier4_system_msgs</depend>
  <depend>tier4_debug_msgs</depend>
  <depend>dummy_perception_publisher</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
