<?xml version="1.0"?>
<package format="3">
  <name>mcity_msgs</name>
  <version>0.0.0</version>
  <description>The mcity_msgs package</description>

  <maintainer email="zhijieq@umich.edu">Zhijie Qiao</maintainer>
  <license>closed source</license>
  <author email="shaobxu@gmail.com">Shaobing Xu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build and Exec Dependancies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>